--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-postcss": "^7.0.1",
+    "jade": "^1.11.0",
     "lodash": "^4.17.10",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "postcss-copy": "^7.1.0",
+    "postcss-import": "^11.1.0"
   }
 }
