--- a/package.json
+++ b/package.json
@@ -12,16 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-cli": "^2.0.1",
-    "gulp-postcss": "^7.0.1",
-    "jade": "^1.11.0",
     "lodash": "^4.17.10",
-    "nodemon": "^1.17.5",
-    "postcss-copy": "^7.1.0",
-    "postcss-import": "^11.1.0"
+    "nodemon": "^1.17.5"
   }
 }
